--- a/views/home.ejs
+++ b/views/home.ejs
@@ -95,6 +95,16 @@
         <span id="settings__child__header" class="settings__child__header flex">
           <h1>BadassBoard settings</h1>
         </span>
+        <span class="searchEngineSelection flex">
+          <span class="searchEngineSelection__Comment flex">Which search engine do you want to use ?</span>
+          <select class="searchEngineSelection__select flex">
+            <option value="Bing">Bing</option>
+            <option value="DuckDuckGo">DuckDuckGo</option>
+            <option value="Ecosia">Ecosia</option>
+            <option value="Google">Google</option>
+            <option value="Qwant">Qwant</option>
+          </select>
+        </span>
         <span id="toggleRss" class="toggleRss flex">
           <span id="toggleRss__Comment" class="toggleRss__Comment">Show the content containers on startup ?</span>
           <label id="toggleRss__Switch" class="toggleRss__Switch">
