--- a/views/home.ejs
+++ b/views/home.ejs
@@ -121,7 +121,7 @@
           <input id="backgroundImageUploadForm__InputFile" class="backgroundImageUploadForm__InputFile" type="file" name="backgroundImageUploadInput" accept="image/png, image/jpg">
           <input id="backgroundImageUploadForm__InputUrl" class="backgroundImageUploadForm__InputUrl" type="text" name="backgroundImageUrl" value="" placeholder='I prefer pasting an URL'>
         </form>
-        <h2 class="settings__child__heading2 settings__child__heading">Weather forecast</h2>
+        <h2 class="settings__child__heading2 settings__child__heading">Awesome features corner 😇</h2>
         <span id="owmToken" class="owmToken flex">
           <span id='owmToken__Comment' class="owmToken__Comment">So you want to use weather forecast feature ? You can update your OpenWeatherMap API token here :</span>
           <input id="owmToken__input" class="owmToken__input" type="text" name="owmToken__input" value="" placeholder="OpenWeatherMap API token">
