Minor style improvements

--- a/src/css/app.css
+++ b/src/css/app.css
@@ -406,7 +406,7 @@ body .backgroundImage {
   justify-content: center;
   background-color: white;
   padding: 0.5% 1%;
-  border-radius: 30px;
+  border-radius: 2em;
   opacity: 0.7;
   margin: 3% 0 0;
 }
