--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -447,7 +447,7 @@ body {
     justify-content: center;
     background-color: white;
     padding: 0.5% 1%;
-    border-radius: 30px;
+    border-radius: 2em;
     opacity: 0.7;
     margin: 3% 0 0;
 
